[gd_scene load_steps=2 format=3 uid="uid://sp366cl6ssob"]

[ext_resource type="Script" path="res://Scripts/inscription.gd" id="1_1mxcp"]

[node name="Inscription" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -4.0
offset_right = -1.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1mxcp")
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 738.0
offset_top = 225.0
offset_right = 963.0
offset_bottom = 445.0
expand_mode = 1
stretch_mode = 6

[node name="LabelPseudo" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.002
offset_left = 366.0
offset_top = 283.0
offset_right = 420.44
offset_bottom = 306.0
text = "pseudo
"

[node name="LabelMdp" type="Label" parent="."]
layout_mode = 0
offset_left = 321.0
offset_top = 349.0
offset_right = 424.0
offset_bottom = 372.0
text = "mot de passe"

[node name="LineEditPseudo" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 447.0
offset_top = 277.0
offset_right = 626.0
offset_bottom = 311.0

[node name="LineEditMdp" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 445.0
offset_top = 341.0
offset_right = 632.0
offset_bottom = 378.0

[node name="ButtonImport" type="Button" parent="."]
layout_mode = 0
offset_left = 772.0
offset_top = 468.0
offset_right = 935.0
offset_bottom = 499.0
text = "Importer une photo"

[node name="ButtonInscrire" type="Button" parent="."]
layout_mode = 0
offset_left = 471.0
offset_top = 429.0
offset_right = 609.0
offset_bottom = 479.0
text = "S'inscrire"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
position = Vector2i(0, 36)
size = Vector2i(600, 400)
always_on_top = true
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpg", "*.jpeg")

[node name="ButtonConnect" type="Button" parent="."]
layout_mode = 0
offset_left = 469.0
offset_top = 510.0
offset_right = 617.0
offset_bottom = 558.0
text = "Se connecter ?"

[node name="ButtonPrincipal" type="Button" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 41.0
offset_right = 173.0
offset_bottom = 92.0
text = "Retour"

[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
